# ot-harjoitustyo

./: README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/TehtavaMonopoli/: LuokkakaavioMonopoli.md
poetry-testi/: pyproject.toml
python_budget_app/dokumentaatio/: README.md
python_budget_app/dokumentaatio/tyoaikakirjanpito/: README.md
