[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["kirillke <kirill.keranen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_testi"}]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
